# preempt-k8s

./: .gitignore  README.md
CRD_Controller/: Cargo.toml  Dockerfile
CRD_Controller/src/: main.rs
CRD_Controller/src/Resources/: controller.yaml  crd.yaml  resource.yaml
CRD_Controller/src/Resources/auth/: binding.yaml  role.yaml
Knative/: CREATE_CUSTOM_VERSION.md  KNATIVE_TUTORIAL.md
Knative/DOCKER/ACTIVATOR/: Dockerfile
Knative/manifests/: kn_resource.yaml  knative-service.yaml  panic_mode.yaml  pod.yaml  scaler_role.yaml  serving-core.yaml
controller/: Cargo.toml  Dockerfile
controller/src/: main.rs
experiments/exempt-configuration/: api-exempt.yaml
experiments/interfering-load/: interfering-load.sh
experiments/k8s-results-store/: LONGHORN.md  persistent-volume-claim.yaml  persistent-volume.yaml  storage-class.yaml
experiments/test-pods/: benchmark-pod.yaml  test-pod.yaml
helm/: Chart.yaml  values.yaml
manifests/application-example/: test-application.yaml
manifests/test/: test-pod.yaml
monitoring/: MONITORING.md
monitoring/audit/: AUDITING.md  README.md  SETUP.md  audit-policy.yaml
monitoring/grafana-loki/: loki-deploy.yaml
monitoring/open-telemetry/: otel-collector-deployment.yaml
monitoring/open-telemetry-collector/: opentelemetry-collector-deploy.yaml
monitoring/tracing/: TRACING.md  tracing-config.yaml
monitoring/zipkin/: zipkin-deploy.yaml
resources/auth/: role-binding.yaml  role.yaml  service-account.yaml
resources/controller-deploy/: configmap.yaml  deployment.yaml  pod.yaml
resources/managed/: RTResource.yaml
(+113 files in other folders)
