[package]
name = "CRD_Controller"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "0.87.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20.0", features = ["v1_28"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
futures = "0.3"
libc = "0.2.159"
nix = "0.25"
chrono = "0.4"
anyhow = "1.0"
rand = "0.8"
